// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0


// google health mod
syntax = "proto3";

package protos;

option go_package = "github.com/Proxmox-Cloud/terraform-provider-pxc/internal/provider/protos;protos";

message HealthCheckRequest {
  string target_pve = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    SERVING = 0;
    MISSMATCH = 1;
  }
  ServingStatus status = 1;
  string error_message = 2;
}

service Health {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
}